--- a/app/files/css/node_stats.scss
+++ b/app/files/css/node_stats.scss
@@ -9,7 +9,7 @@
 }
 
 .maximized .load .badge {
-  padding: 1em 0.8em;
+  padding: 0.5em 0.8em;
 }
 
 .maximized .node-stats table {
@@ -26,11 +26,14 @@
 
 .node {
   .disks-group {
-    float: right;
     overflow: hidden;
     margin-right: 0.3em;
     min-width: 5em;
     max-width: 5em;
+    position: absolute;
+    right: 0;
+    margin-top: 1.5em;
+    margin-right: 0.2em;
   }
 
   .icon.disks {
@@ -43,6 +46,7 @@
 
 .maximized .node .disks-group {
   float: none;
+  position: relative;
   min-width: 8em;
   max-width: 8em;
 
@@ -82,7 +86,7 @@
 }
 
 .maximized .badges .badge {
-  padding: 0.4em 0.3em;
+  padding: 0.5em 0.5em;
 }
 
 .disk-stats .badge {
