Tweak task ID label text color to increase prominence

--- a/app/files/css/task.scss
+++ b/app/files/css/task.scss
@@ -90,7 +90,7 @@ span.task {
     text-overflow: ellipsis;
     display: block;
     font-size: 0.8em;
-    color: $label-text-dark;
+    color: $label-text;
   }
 
   .chart-button {
