--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -66,9 +66,9 @@
       </div>
     </div>
     {% if env == 'development' %}
-      <script src="http://localhost:8081/files/bundle.js"></script>
+      <script src="http://localhost:8081/bundle.js"></script>
     {% else %}
-      <script src="/files/bundle-{{ js_md5 }}.js"></script>
+      <script src="/dist/bundle-{{ js_md5 }}.js"></script>
     {% endif %}
   </body>
 
