Ensure React is available in all modules
Was previously provided as a plugin - prefer to be more explicit about
imports for clarity.

Move dev launch scripts into their respective directories so that window
title includes the relevant directory (easier identification in tiling
WMs etc.)

--- a/app/files/css/chart.scss
+++ b/app/files/css/chart.scss
@@ -9,7 +9,7 @@
 
 .chart-wrapper {
   z-index: 9999999999;
-  width: 62em;
+  width: 63em;
   min-height: 35em;
 
   .header {
@@ -23,6 +23,10 @@
 
 .chart-wrapper.ready:hover {
   background-color: $modal-background-hover-color;
+}
+
+.modal-content-body.chart {
+  overflow-y: hidden;
 }
 
 .chart {
