Fix stylesheet location

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -15,7 +15,7 @@
     <!-- /Favicon -->
 
     {% if env == 'production' %}
-      <link rel="stylesheet" href="/files/main-{{ css_md5 }}.css"></link>
+      <link rel="stylesheet" href="/dist/main-{{ css_md5 }}.css"></link>
     {% endif %}
     <style>
       .loader-wrapper {
