Add "Networks" popup to services
Display a popup containing information about joined networks and all
rearchable services + which networks and aliases each is available on.

--- a/app/files/css/main.scss
+++ b/app/files/css/main.scss
@@ -10,6 +10,7 @@
 @import "dashboard.scss";
 @import "mapping.scss";
 @import "mounts.scss";
+@import "networks.scss";
 @import "node.scss";
 @import "node_stats.scss";
 @import "service.scss";
