--- a/app/files/css/node.scss
+++ b/app/files/css/node.scss
@@ -3,7 +3,7 @@
   height: calc(100% - 2em);
   width: 21em;
   padding: 1em;
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow: -moz-scrollbars-none;
   -ms-overflow-style: none;
 }
