--- a/app/files/css/service.scss
+++ b/app/files/css/service.scss
@@ -196,7 +196,8 @@ tr.service.networked {
   border-bottom: 1px solid $outline;
 
   .image-wrapper {
-    float: left;
+    margin-top: 0.8em;
+    margin-left: -0.4em;
   }
 
   .service-icon .icon {
