--- a/app/files/css/stack.scss
+++ b/app/files/css/stack.scss
@@ -4,7 +4,7 @@
   min-width: 75%;
   max-width: 75%;
   padding-left: 2em;
-  overflow-y: scroll;
+  overflow-y: auto;
   position: fixed;
   table-layout: fixed;
   height: 100%;
